--- a/index.html
+++ b/index.html
@@ -4,213 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>SaaS Psicosocial – Demo UI</title>
-<style>
-  :root{
-    --bg:#0b1220;
-    --bg-soft:#0e1526;
-    --card:#121a2e;
-    --card-2:#141e36;
-    --primary:#5b9cff;
-    --primary-2:#80b3ff;
-    --ok:#49d18e;
-    --warn:#ffd166;
-    --danger:#ff6b6b;
-    --text:#e6ecff;
-    --muted:#aab6d3;
-    --line:#202a44;
-    --shadow: 0 10px 30px rgba(0,0,0,.35);
-    --radius:18px;
-  }
-  *{box-sizing:border-box}
-  html,body{height:100%}
-  body{
-    margin:0;
-    color:var(--text);
-    background:linear-gradient(180deg,#0a1120 0%, #0d1630 100%);
-    font: 15px/1.55 system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji","Segoe UI Emoji";
-  }
-
-  /* Login */
-  .login-screen{
-    position:fixed;
-    inset:0;
-    display:grid;
-    place-items:center;
-    background:radial-gradient(circle at top, rgba(43,69,125,.85), rgba(10,17,32,.95));
-    padding:20px;
-    z-index:30;
-  }
-  .login-card{
-    width:min(420px, 92vw);
-    background:var(--card);
-    border:1px solid var(--line);
-    border-radius:var(--radius);
-    box-shadow:var(--shadow);
-    padding:26px 28px 24px;
-    display:flex;
-    flex-direction:column;
-    gap:18px;
-  }
-  .login-card header{display:flex; gap:12px; align-items:center;}
-  .login-card .logo{width:46px; height:46px; border-radius:16px;}
-  .login-card h2{margin:0; font-size:20px;}
-  .login-card p{margin:0; color:var(--muted);}
-  .login-card label{display:block; font-size:13px; color:var(--muted); margin-bottom:6px;}
-  .login-card input{
-    width:100%;
-    background:#0e1730;
-    border:1px solid #24325b;
-    color:var(--text);
-    padding:10px 12px;
-    border-radius:12px;
-    outline:none;
-  }
-  .login-card input:focus{border-color:var(--primary); box-shadow:0 0 0 2px rgba(91,156,255,.2);}
-  .login-actions{display:flex; justify-content:flex-end;}
-  .login-error{color:var(--danger); font-size:13px; min-height:18px;}
-
-  /* Layout */
-  .app{
-    display:grid;
-    grid-template-columns: 280px 1fr;
-    grid-template-rows: 64px 1fr;
-    grid-template-areas:
-      "sidebar topbar"
-      "sidebar main";
-    min-height:100dvh;
-  }
-  .sidebar{
-    grid-area:sidebar;
-    border-right:1px solid var(--line);
-    background:linear-gradient(180deg, #0f1730 0%, #0b1220 100%);
-    padding:16px;
-    position:sticky; top:0; height:100dvh;
-  }
-  .brand{
-    display:flex; align-items:center; gap:12px; margin-bottom:12px;
-  }
-  .logo{
-    width:38px; height:38px; border-radius:14px;
-    background: radial-gradient(120% 120% at 10% 0%, var(--primary) 0%, #3a64ff 40%, #1b2450 100%);
-    box-shadow: 0 6px 20px rgba(91,156,255,.35), inset 0 0 30px rgba(255,255,255,.05);
-  }
-  .brand h1{font-size:15px; margin:0}
-  .muted{color:var(--muted)}
-  .sidebar .search{
-    display:flex; gap:8px; margin:12px 0 16px;
-    background:var(--bg); border:1px solid var(--line); border-radius:12px; padding:8px 10px;
-  }
-  .sidebar input{
-    flex:1; background:transparent; border:0; color:var(--text); outline:none;
-  }
-  .menu{
-    display:flex; flex-direction:column; gap:6px;
-    padding-top:8px;
-  }
-  .menu .item{
-    display:flex; align-items:center; gap:12px;
-    padding:10px 12px; border-radius:12px; cursor:pointer;
-    color:var(--muted); border:1px solid transparent;
-  }
-  .menu .item:hover{ background: #0f1933; border-color: #1b2650; color:var(--text)}
-  .menu .item.active{ background: linear-gradient(180deg,#122147,#0e1835); border-color:#263460; color:var(--text)}
-  .tag{margin-left:auto; font-size:12px; padding:.5px 8px; border-radius:99px; background:#142246; color:#9bb7ff; border:1px solid #273a78}
-
-  .topbar{
-    grid-area:topbar;
-    display:flex; align-items:center; justify-content:space-between;
-    padding:12px 18px; border-bottom:1px solid var(--line); backdrop-filter: blur(6px);
-    position:sticky; top:0; z-index:5;
-  }
-  .crumbs{display:flex; gap:10px; align-items:center; color:var(--muted)}
-  .actions{display:flex; gap:8px}
-  .btn{
-    background: var(--card-2); border:1px solid #24325b; color:var(--text);
-    padding:8px 12px; border-radius:12px; cursor:pointer;
-  }
-  .btn.primary{
-    background: linear-gradient(180deg, var(--primary) 0%, #3d7dff 100%);
-    color:#07122b; border:0; font-weight:700; box-shadow: 0 6px 16px rgba(91,156,255,.35);
-  }
-
-  .main{
-    grid-area:main;
-    padding:18px; overflow:auto;
-  }
-
-  /* Cards / grids */
-  .grid{
-    display:grid; gap:16px;
-    grid-template-columns: repeat(12,1fr);
-  }
-  .card{
-    background: linear-gradient(180deg, #121a31 0%, #10182c 100%);
-    border:1px solid var(--line); border-radius: var(--radius); padding:16px; box-shadow: var(--shadow);
-  }
-  .card h3{margin:0 0 8px; font-size:16px}
-  .kpi{
-    display:flex; align-items:center; justify-content:space-between;
-    padding:10px; border:1px solid #24325b; border-radius:14px; background:#0e1730;
-  }
-  .kpi b{font-size:22px}
-  .pill{padding:4px 8px; border-radius:999px; font-size:12px; border:1px solid #273a78; color:#9bb7ff; background:#141e39}
-  .ok{background:#0f2a22; border-color:#114c3a; color:#85f3c1}
-  .warn{background:#2a220f; border-color:#4c3a11; color:#ffe09a}
-  .danger{background:#2a1111; border-color:#4c1111; color:#ff9b9b}
-
-  /* Table */
-  .table{
-    width:100%; border-collapse: collapse; border:1px solid var(--line); overflow:hidden; border-radius:14px;
-  }
-  .table th, .table td{
-    padding:10px 12px; border-bottom:1px solid #1a2544; text-align:left;
-  }
-  .table thead th{ background:#0f1833; color:#9bb7ff; position:sticky; top:0}
-  .table tr:hover td{ background:#0e1630}
-
-  /* Toolbar */
-  .toolbar{display:flex; gap:10px; align-items:center; flex-wrap:wrap; margin-bottom:10px}
-  .input, select{
-    background:#0e1730; border:1px solid #24325b; color:var(--text);
-    padding:8px 10px; border-radius:10px; outline:none;
-  }
-
-  /* Tabs (secondary) */
-  .tabs{display:flex; gap:8px; margin-bottom:10px; flex-wrap:wrap}
-  .tab{padding:8px 12px; border-radius:10px; border:1px solid #24325b; background:#0e1730; color:var(--muted); cursor:pointer}
-  .tab.active{background:#132044; color:var(--text); border-color:#3753a6}
-
-  /* Badges */
-  .badge{font-size:12px; padding:4px 8px; border-radius:999px; border:1px solid #24325b; color:#b9c6ef; background:#111a33}
-
-  /* Modal */
-  .modal-bg{
-    position:fixed; inset:0; background:rgba(0,0,0,.55); display:none; place-items:center; z-index:20;
-  }
-  .modal{
-    width:min(720px, 92vw); background:var(--card); border:1px solid var(--line);
-    border-radius:18px; padding:16px; box-shadow: var(--shadow);
-  }
-  .modal h3{margin:0 0 6px}
-  .modal .row{display:grid; grid-template-columns:1fr 1fr; gap:10px}
-  .modal label{font-size:13px; color:var(--muted)}
-  .modal textarea, .modal input, .modal select{
-    width:100%; background:#0e1730; border:1px solid #24325b; color:var(--text);
-    padding:8px 10px; border-radius:10px; outline:none;
-  }
-
-  /* Hide views by default */
-  .view{display:none}
-  .view.active{display:block}
-
-  /* Responsive */
-  @media (max-width: 980px){
-    .app{grid-template-columns: 1fr; grid-template-rows: 64px auto 1fr; grid-template-areas:
-      "topbar" "sidebar" "main";}
-    .sidebar{position:static; height:auto}
-  }
-
-</style>
+<link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
 <div class="login-screen" id="login-screen" role="dialog" aria-modal="true" aria-labelledby="login-title">
@@ -254,15 +48,15 @@
     </div>
 
     <nav class="menu" id="menu">
-      <div class="item active" data-view="dashboard">📊 Dashboard</div>
-      <div class="item" data-view="evaluaciones">📝 Evaluaciones</div>
-      <div class="item" data-view="reportes">📄 Reportes</div>
-      <div class="item" data-view="carpeta">🗂 Carpeta Legal</div>
-      <div class="item" data-view="plan">✅ Plan de Acción <span class="tag">4 pendientes</span></div>
-      <div class="item" data-view="capacitaciones">🎓 Capacitaciones</div>
-      <div class="item" data-view="casos">🔒 Casos</div>
-      <div class="item" data-view="usuarios">👥 Usuarios</div>
-      <div class="item" data-view="config">⚙️ Configuración</div>
+      <div class="item active" data-view="dashboard" data-label="Dashboard">📊 Dashboard</div>
+      <div class="item" data-view="evaluaciones" data-label="Evaluaciones">📝 Evaluaciones</div>
+      <div class="item" data-view="reportes" data-label="Reportes">📄 Reportes</div>
+      <div class="item" data-view="carpeta" data-label="Carpeta Legal">🗂 Carpeta Legal</div>
+      <div class="item" data-view="plan" data-label="Plan de Acción">✅ Plan de Acción <span class="tag">4 pendientes</span></div>
+      <div class="item" data-view="capacitaciones" data-label="Capacitaciones">🎓 Capacitaciones</div>
+      <div class="item" data-view="casos" data-label="Casos">🔒 Casos</div>
+      <div class="item" data-view="usuarios" data-label="Usuarios">👥 Usuarios</div>
+      <div class="item" data-view="config" data-label="Configuración">⚙️ Configuración</div>
     </nav>
 
     <div style="margin-top:16px; border-top:1px solid var(--line); padding-top:12px">
@@ -585,239 +379,6 @@
   </div>
 </div>
 
-<script>
-  // Login sencillo (demo)
-  const loginForm = document.getElementById('login-form');
-  if (loginForm) {
-    const loginScreen = document.getElementById('login-screen');
-    const loginError = document.getElementById('login-error');
-    const app = document.getElementById('app');
-    const userField = document.getElementById('login-username');
-    const passField = document.getElementById('login-password');
-    const credentials = { username: 'Armando', password: 'admin' };
-    const logoutButton = document.getElementById('btnLogout');
-
-    const showApp = ()=>{
-      loginError.textContent = '';
-      loginScreen.style.display = 'none';
-      app.style.display = 'grid';
-      passField.value = '';
-    };
-
-    const logout = ()=>{
-      sessionStorage.removeItem('psicosst-session');
-      app.style.display = 'none';
-      loginScreen.style.display = 'grid';
-      loginForm.reset();
-      loginError.textContent = '';
-      setTimeout(()=> userField.focus(), 100);
-    };
-
-    if (logoutButton) {
-      logoutButton.addEventListener('click', logout);
-    }
-
-    if (sessionStorage.getItem('psicosst-session') !== 'active') {
-      setTimeout(()=> userField.focus(), 100);
-    }
-
-    const tryAutoLogin = ()=>{
-      const savedSession = sessionStorage.getItem('psicosst-session');
-      if (savedSession === 'active') {
-        showApp();
-        loginScreen.style.display = 'none';
-        app.style.display = 'grid';
-        userField.value = credentials.username;
-      }
-    };
-
-    tryAutoLogin();
-
-    loginForm.addEventListener('submit', (event)=>{
-      event.preventDefault();
-      const username = userField.value.trim();
-      const password = passField.value;
-
-      if (username.toLowerCase() === credentials.username.toLowerCase() && password === credentials.password) {
-        showApp();
-        sessionStorage.setItem('psicosst-session', 'active');
-        passField.value = '';
-        loginError.textContent = '';
-        loginScreen.style.display = 'none';
-        app.style.display = 'grid';
-        sessionStorage.setItem('psicosst-session', 'active');
-      } else {
-        loginError.textContent = 'Usuario o contraseña incorrectos. (Armando / admin)';
-        passField.value = '';
-        passField.focus();
-      }
-    });
-  }
-
-  // Navegación entre vistas
-  const menu = document.getElementById('menu');
-  const views = [...document.querySelectorAll('.view')];
-  const crumb = document.getElementById('crumb');
-
-  menu.addEventListener('click', (e)=>{
-    const item = e.target.closest('.item');
-    if(!item) return;
-    menu.querySelectorAll('.item').forEach(i=>i.classList.remove('active'));
-    item.classList.add('active');
-    const target = item.dataset.view;
-    views.forEach(v => v.classList.toggle('active', v.id === 'view-'+target));
-    crumb.textContent = item.textContent.replace(/\s*\d*\s*pendientes/,'').trim();
-  });
-
-  // Tabs en Reportes
-  const tabs = document.getElementById('tabs-reportes');
-  if (tabs){
-    tabs.addEventListener('click', (e)=>{
-      const t = e.target.closest('.tab');
-      if(!t) return;
-      tabs.querySelectorAll('.tab').forEach(x=>x.classList.remove('active'));
-      t.classList.add('active');
-      const tab = t.dataset.tab;
-      document.getElementById('panel-global').style.display = tab==='global'?'block':'none';
-      document.getElementById('panel-individuales').style.display = tab==='individuales'?'block':'none';
-      document.getElementById('panel-comparativos').style.display = tab==='comparativos'?'block':'none';
-    });
-  }
-
-  // Modal genérico (reutilizado para "Nueva evaluación" / "Nueva acción" / etc.)
-  const modalBg = document.getElementById('modal-bg');
-  const openModal = (title='Nueva evaluación')=>{
-    document.getElementById('modal-title').textContent = title;
-    modalBg.style.display='grid';
-  };
-  const closeModal = ()=> modalBg.style.display='none';
-  document.getElementById('modal-close').onclick = closeModal;
-  document.getElementById('modal-cancel').onclick = closeModal;
-
-  document.getElementById('btnNew').onclick = ()=> openModal('Nueva evaluación');
-  const btnNuevaEval = document.getElementById('btnNuevaEval');
-  if (btnNuevaEval) btnNuevaEval.onclick = ()=> openModal('Nueva evaluación');
-  const btnNuevaAccion = document.getElementById('btnNuevaAccion');
-  if (btnNuevaAccion) btnNuevaAccion.onclick = ()=> openModal('Nueva acción');
-
-  // Simular descarga de carpeta SUNAFIL
-  document.getElementById('btnZip').onclick = ()=>{
-    alert('Se generará la Carpeta SUNAFIL (ZIP) con informes, plan, actas y evidencias.\n(Demo visual)');
-  };
-
-  // Búsqueda (demo)
-  const q = document.getElementById('q');
-  q.addEventListener('keydown', (e)=>{
-    if(e.key==='Enter') alert('Buscar: ' + q.value + '\n(Demo visual)');
-  });
-
-  // Gestión básica de usuarios (demo funcional)
-  const userTableBody = document.getElementById('user-table-body');
-  const userModalBg = document.getElementById('user-modal-bg');
-  const userModalClose = document.getElementById('user-modal-close');
-  const userModalCancel = document.getElementById('user-modal-cancel');
-  const userModalTitle = document.getElementById('user-modal-title');
-  const userForm = document.getElementById('user-form');
-  const userNameInput = document.getElementById('user-name');
-  const userEmailInput = document.getElementById('user-email');
-  const userRoleInput = document.getElementById('user-role');
-  const userStatusInput = document.getElementById('user-status');
-  const btnNuevoUser = document.getElementById('btnNuevoUser');
-  const statusClassMap = {
-    'Activo': 'pill ok',
-    'Invitado': 'pill',
-    'Suspendido': 'pill warn'
-  };
-  const users = [
-    { name: 'Armando Aparicio', email: 'armando@empresa.pe', role: 'Psicólogo', status: 'Activo' },
-    { name: 'María Torres', email: 'maria@empresa.pe', role: 'Comité SST', status: 'Invitado' }
-  ];
-  let editingUserIndex = null;
-
-  const renderUsers = ()=>{
-    if (!userTableBody) return;
-    if (!users.length) {
-      userTableBody.innerHTML = '<tr><td colspan="5" class="muted" style="text-align:center">No hay usuarios registrados.</td></tr>';
-      return;
-    }
-    userTableBody.innerHTML = users.map((user, index)=>{
-      const pillClass = statusClassMap[user.status] || 'pill';
-      return `<tr>
-        <td>${user.name}</td>
-        <td>${user.email}</td>
-        <td>${user.role}</td>
-        <td><span class="${pillClass}">${user.status}</span></td>
-        <td><button class="btn btn-edit-user" data-index="${index}">Editar</button></td>
-      </tr>`;
-    }).join('');
-  };
-
-  const openUserModal = (index = null)=>{
-    editingUserIndex = index;
-    if (index === null) {
-      userForm.reset();
-      userStatusInput.value = 'Activo';
-      userRoleInput.value = 'Psicólogo';
-      userModalTitle.textContent = 'Nuevo usuario';
-    } else {
-      const user = users[index];
-      userNameInput.value = user.name;
-      userEmailInput.value = user.email;
-      userRoleInput.value = user.role;
-      userStatusInput.value = user.status;
-      userModalTitle.textContent = 'Editar usuario';
-    }
-    userModalBg.style.display = 'grid';
-    setTimeout(()=> userNameInput.focus(), 50);
-  };
-
-  const closeUserModal = ()=>{
-    userModalBg.style.display = 'none';
-    userForm.reset();
-    userStatusInput.value = 'Activo';
-    userRoleInput.value = 'Psicólogo';
-    editingUserIndex = null;
-  };
-
-  if (btnNuevoUser) btnNuevoUser.addEventListener('click', ()=> openUserModal());
-  if (userModalClose) userModalClose.addEventListener('click', closeUserModal);
-  if (userModalCancel) userModalCancel.addEventListener('click', closeUserModal);
-
-  if (userForm) {
-    userForm.addEventListener('submit', (event)=>{
-      event.preventDefault();
-      const newUser = {
-        name: userNameInput.value.trim(),
-        email: userEmailInput.value.trim(),
-        role: userRoleInput.value,
-        status: userStatusInput.value
-      };
-
-      if (!newUser.name || !newUser.email) {
-        return;
-      }
-
-      if (editingUserIndex === null) {
-        users.push(newUser);
-      } else {
-        users[editingUserIndex] = { ...users[editingUserIndex], ...newUser };
-      }
-      renderUsers();
-      closeUserModal();
-    });
-  }
-
-  if (userTableBody) {
-    userTableBody.addEventListener('click', (event)=>{
-      const button = event.target.closest('.btn-edit-user');
-      if (!button) return;
-      const index = Number(button.dataset.index);
-      if (Number.isNaN(index)) return;
-      openUserModal(index);
-    });
-  }
-
-  renderUsers();
-</script>
+<script type="module" src="js/app.js"></script>
 </body>
 </html>
