--- a/index.html
+++ b/index.html
@@ -118,21 +118,16 @@
       <div class="card">
         <div class="toolbar">
           <button class="btn primary" id="btnNuevaEval">+ Crear evaluación</button>
-          <select>
-            <option>MINSA 2024</option>
-            <option>COPSOQ (base)</option>
-            <option>ISTAS21 (referencial)</option>
-          </select>
-          <input class="input" placeholder="Filtrar por área/puesto…" />
-          <span class="badge">128 respondidas</span>
+          <div class="muted" style="display:flex; align-items:center; gap:8px">
+            <span style="font-weight:600">Instrumento:</span>
+            <span>MINSA 2024</span>
+          </div>
+          <span class="badge" id="evaluaciones-count">0 activas</span>
         </div>
-        <table class="table">
+        <p class="muted" style="margin-top:-4px">Gestiona aquí todas las aplicaciones del instrumento MINSA 2024 en tu organización.</p>
+        <table class="table" aria-describedby="evaluaciones-count">
           <thead><tr><th>Evaluación</th><th>Área</th><th>Periodo</th><th>Estado</th><th>Acciones</th></tr></thead>
-          <tbody>
-            <tr><td>MINSA 2024</td><td>Atención al Cliente</td><td>Oct-2025</td><td><span class="pill warn">En curso</span></td><td><button class="btn">Ver</button></td></tr>
-            <tr><td>COPSOQ</td><td>Ventas</td><td>Sep-2025</td><td><span class="pill ok">Completado</span></td><td><button class="btn">Resultados</button></td></tr>
-            <tr><td>MINSA 2024</td><td>Operaciones</td><td>Ago-2025</td><td><span class="pill ok">Completado</span></td><td><button class="btn">PDF</button></td></tr>
-          </tbody>
+          <tbody id="evaluaciones-body"></tbody>
         </table>
       </div>
     </section>
@@ -344,40 +339,56 @@
   <div class="modal" role="dialog" aria-modal="true" aria-labelledby="modal-title">
     <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:8px">
       <h3 id="modal-title">Nueva evaluación</h3>
-      <button class="btn" id="modal-close">✖</button>
+      <button class="btn" type="button" id="modal-close">✖</button>
     </div>
-    <div class="row">
-      <div>
-        <label>Instrumento</label>
-        <select>
-          <option>MINSA 2024</option>
-          <option>COPSOQ</option>
-          <option>ISTAS21 (ref.)</option>
-        </select>
+    <form id="evaluation-form">
+      <div class="row">
+        <div style="grid-column:1 / -1">
+          <label for="evaluation-instrument">Instrumento</label>
+          <input id="evaluation-instrument" name="instrument" value="MINSA 2024" readonly />
+          <div class="muted" style="font-size:12px">El formulario aplica exclusivamente el cuestionario oficial MINSA 2024.</div>
+        </div>
+        <div>
+          <label for="evaluation-area">Área</label>
+          <input id="evaluation-area" name="area" placeholder="Ej. Atención al Cliente" required />
+        </div>
+        <div>
+          <label for="evaluation-period">Periodo</label>
+          <input id="evaluation-period" name="period" type="month" required />
+        </div>
+        <div>
+          <label for="evaluation-mode">Modo</label>
+          <select id="evaluation-mode" name="mode">
+            <option value="Anónimo">Anónimo</option>
+            <option value="Identificado">Identificado</option>
+          </select>
+        </div>
+        <div style="grid-column:1/-1">
+          <label for="evaluation-notes">Notas</label>
+          <textarea id="evaluation-notes" name="notes" rows="4" placeholder="Instrucciones para participantes…"></textarea>
+        </div>
       </div>
-      <div>
-        <label>Área</label>
-        <input placeholder="Ej. Atención al Cliente" />
+      <div style="display:flex; justify-content:flex-end; gap:8px; margin-top:12px">
+        <button class="btn" type="button" id="modal-cancel">Cancelar</button>
+        <button class="btn primary" type="submit">Crear</button>
       </div>
-      <div>
-        <label>Periodo</label>
-        <input type="month" />
-      </div>
-      <div>
-        <label>Modo</label>
-        <select><option>Anónimo</option><option>Identificado</option></select>
-      </div>
-      <div style="grid-column:1/-1">
-        <label>Notas</label>
-        <textarea rows="4" placeholder="Instrucciones para participantes…"></textarea>
-      </div>
-    </div>
-    <div style="display:flex; justify-content:flex-end; gap:8px; margin-top:12px">
-      <button class="btn" id="modal-cancel">Cancelar</button>
-      <button class="btn primary">Crear</button>
-    </div>
+    </form>
   </div>
 </div>
+
+<template id="evaluation-summary-template">
+  <div class="toast-card" role="status">
+    <strong>Evaluación MINSA 2024 creada</strong>
+    <dl>
+      <div><dt>Área</dt><dd data-summary="area"></dd></div>
+      <div><dt>Periodo</dt><dd data-summary="periodo"></dd></div>
+      <div><dt>Modo</dt><dd data-summary="modo"></dd></div>
+      <div><dt>Notas</dt><dd data-summary="notas"></dd></div>
+    </dl>
+  </div>
+</template>
+
+<div class="toast" id="evaluation-toast" aria-live="assertive"></div>
 
 <script type="module" src="js/app.js"></script>
 </body>
