--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
 
     <div class="footer-note">
-      <div class="muted small">© 2025 AlbatrossCloud SAC</div>
+      <div class="muted small">© 2025 Aparicio Armando</div>
     </div>
   </aside>
 
