--- a/modules/carpeta/view.html
+++ b/modules/carpeta/view.html
@@ -1,6 +1,6 @@
 <div class="card">
   <h3>Carpeta Legal Psicosocial (SUNAFIL)</h3>
-  <p class="muted">Estructura sugerida. Usa el botón “⬇️ Carpeta SUNAFIL” (topbar) para simular.</p>
+  <p class="muted">Estructura sugerida. El botón superior “⬇️ Carpeta SUNAFIL” simula la descarga del ZIP.</p>
   <ul>
     <li>01_Informe_Consolidado.pdf</li>
     <li>02_Informes_Individuales/</li>
