--- a/modules/casos/view.html
+++ b/modules/casos/view.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="toolbar">
-    <span class="pill danger">5 abiertos</span>
-    <span class="pill ok">10 cerrados</span>
+    <span class="badge danger">5 abiertos</span>
+    <span class="badge ok">10 cerrados</span>
   </div>
   <table class="table">
     <thead><tr><th>Código</th><th>Tipo</th><th>Estado</th><th>Última actualización</th><th></th></tr></thead>
