--- a/modules/dashboard/view.html
+++ b/modules/dashboard/view.html
@@ -1,27 +1,15 @@
-<div class="grid">
+<div class="grid" style="grid-template-columns: repeat(12, 1fr)">
   <div class="card" style="grid-column: span 4">
     <h3>Participación</h3>
-    <div class="kpi">
-      <span>Encuestas respondidas</span>
-      <b id="kpi-respondidas">0</b>
-      <span class="pill ok" id="kpi-tasa">0% tasa</span>
-    </div>
+    <div class="kpi"><span>Encuestas respondidas</span><b>128</b><span class="pill ok">82% tasa</span></div>
   </div>
   <div class="card" style="grid-column: span 4">
     <h3>Riesgo global</h3>
-    <div class="kpi">
-      <span>Nivel</span>
-      <b id="kpi-riesgo">Bajo</b>
-      <span class="pill ok" id="kpi-riesgo-pill">Satisfactorio</span>
-    </div>
+    <div class="kpi"><span>Nivel</span><b>Medio</b><span class="pill warn">Atender</span></div>
   </div>
   <div class="card" style="grid-column: span 4">
     <h3>Casos abiertos</h3>
-    <div class="kpi">
-      <span>Confidenciales</span>
-      <b id="kpi-casos">0</b>
-      <span class="pill danger" id="kpi-casos-pill">—</span>
-    </div>
+    <div class="kpi"><span>Confidenciales</span><b>5</b><span class="pill danger">3 urgentes</span></div>
   </div>
 
   <div class="card" style="grid-column: span 8">
