--- a/modules/plan/view.html
+++ b/modules/plan/view.html
@@ -1,13 +1,13 @@
 <div class="card">
   <div class="toolbar">
-    <button class="btn primary" onclick="alert('Nueva acción (Demo)')">+ Nueva acción</button>
+    <button class="btn primary" id="btnNuevaAccion">+ Nueva acción</button>
     <select><option>Todas las áreas</option><option>Ventas</option><option>Operaciones</option></select>
     <select><option>Todas</option><option>Pendiente</option><option>En curso</option><option>Completada</option></select>
   </div>
   <table class="table">
     <thead><tr><th>Riesgo</th><th>Acción</th><th>Responsable</th><th>Vence</th><th>Estado</th></tr></thead>
     <tbody>
-      <tr><td>Carga mental alta</td><td>Redistribuir turnos y pausas</td><td>Jefe Operaciones</td><td>20/10/2025</td><td><span class="pill warn">En curso</span></td></tr>
+      <tr><td>Carga mental alta</td><td>Redistribuir turnos y establecer pausas</td><td>Jefe Operaciones</td><td>20/10/2025</td><td><span class="pill warn">En curso</span></td></tr>
       <tr><td>Liderazgo deficiente</td><td>Taller de feedback efectivo</td><td>RRHH</td><td>05/11/2025</td><td><span class="pill">Pendiente</span></td></tr>
       <tr><td>Acoso reportado</td><td>Protocolo y mediación</td><td>Comité SST</td><td>Inmediato</td><td><span class="pill danger">Urgente</span></td></tr>
     </tbody>
