--- a/modules/reportes/view.html
+++ b/modules/reportes/view.html
@@ -4,19 +4,15 @@
     <div class="tab" data-tab="individuales">Individuales</div>
     <div class="tab" data-tab="comparativos">Comparativos</div>
   </div>
-
   <div id="panel-global">
     <p class="muted">Resumen global por dimensiones (placeholder):</p>
-    <div class="grid">
+    <div class="grid" style="grid-template-columns: repeat(12, 1fr)">
       <div class="kpi" style="grid-column: span 4"><span>Carga mental</span><b>Alto</b><span class="pill danger">Prioridad</span></div>
       <div class="kpi" style="grid-column: span 4"><span>Liderazgo</span><b>Medio</b><span class="pill warn">Mejorar</span></div>
       <div class="kpi" style="grid-column: span 4"><span>Clima</span><b>Bajo</b><span class="pill ok">Satisfactorio</span></div>
     </div>
-    <div style="height:220px; margin-top:12px; border:1px dashed #24325b; border-radius:12px; display:grid; place-items:center; color:var(--muted)">
-      (Placeholder gráfico barras)
-    </div>
+    <div style="height:220px; margin-top:12px; border:1px dashed #24325b; border-radius:12px; display:grid; place-items:center; color:var(--muted)">(Placeholder gráfico barras)</div>
   </div>
-
   <div id="panel-individuales" style="display:none">
     <p class="muted">Listado de informes individuales (placeholder):</p>
     <table class="table">
@@ -28,11 +24,8 @@
       </tbody>
     </table>
   </div>
-
   <div id="panel-comparativos" style="display:none">
     <p class="muted">Comparativa por periodos/áreas (placeholder):</p>
-    <div style="height:220px; border:1px dashed #24325b; border-radius:12px; display:grid; place-items:center; color:var(--muted)">
-      (Placeholder línea temporal)
-    </div>
+    <div style="height:220px; border:1px dashed #24325b; border-radius:12px; display:grid; place-items:center; color:var(--muted)">(Placeholder línea temporal)</div>
   </div>
 </div>
